# CubbyServer

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: audit.yml  build.yml
account/: .env  Cargo.toml  Dockerfile
account/src/: main.rs
admin/: package-lock.json  package.json
admin/pages/: index.tsx
auth/: Cargo.toml
game/: Cargo.toml
middleware/: Cargo.toml
middleware/src/: config.rs  lib.rs
nginx/: nginx.conf
