[package]
name = "cubby_server"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>", "Seungoh Han <so.h4ns@gmail.com>", "Jaeyong Sung <jaeyong0201@gmail.com>", "Seungbin Oh <sboh1214@gmail.com>"]
description = "Voxel-based MMORPG server using Rust"
repository = "https://github.com/utilforever/CubbyServer"
readme = "README.md"
keywords = [ "game", "mmorpg", "server" ]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
